# vsa

./: .gitignore  CMakeLists.txt
cmake/: dependencies.cmake
src/: main.cpp  village_app.cpp  village_app.hpp
src/simulation/: simulation_config.hpp  simulation_controller.cpp  simulation_controller.hpp  simulation_data.cpp  simulation_data.hpp
src/tools/: logger.hpp  random_engine.cpp  random_engine.hpp
src/ui/: configuration_window.cpp  configuration_window.hpp  main_window.cpp  renderer.hpp  results_window.hpp  statistics_window.hpp  test_window.cpp
src/village/: entities_registrator.cpp  entities_registry.cpp  entities_registry.hpp  item.hpp  items_registrator.cpp  items_registry.cpp  items_registry.hpp  material.hpp  resident.cpp  resident.hpp  storage.hpp  tool.hpp  village.cpp  village.hpp  village_config.cpp  village_config.hpp
src/village/dishes/: dish_bread.hpp
src/village/materials/: material_metal_ore.hpp  material_wheat.hpp
src/village/residents/: resident_baker.cpp  resident_baker.hpp  resident_blacksmith.cpp  resident_blacksmith.hpp  resident_factory.cpp  resident_factory.hpp  resident_miner.cpp  resident_miner.hpp
src/village/tools/: tool_sickle.cpp  tool_sickle.hpp  tool_triphammer.cpp  tool_triphammer.hpp
